# gameanalytics-sdk-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  setup.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  cmake.yml  coverage.yml  create_release.yml
include/GameAnalytics/: GAHttpClient.h  GAHttpWrapper.h  GAProgressionTries.h  GATypes.h  GameAnalytics.h
include/GameAnalytics/Server/: GACustomFields.h  GAPlayer.h  GAServer.h
sample/: CMakeLists.txt
sample_shared/: CMakeLists.txt
source/dependencies/crossguid/: guid.cpp
source/gameanalytics/: Common.h  Constants.h  GACommon.h  GAConstants.h  GAEvents.cpp  GAEvents.h  GAHTTPApi.cpp  GAHTTPApi.h  GAHealth.cpp  GAProgressionTries.cpp  GAProgressionTries.h  GAState.cpp  GAState.h  GAUncaughtExceptionHandler.cpp  GAUncaughtExceptionHandler.h  GAUtilities.cpp  GAUtilities.h  GAValidator.cpp  GameAnalytics.cpp  GameAnalyticsExtern.cpp
source/gameanalytics/Http/: GAHttpCurl.cpp  GAHttpCurl.h  GAHttpStub.cpp  GAHttpStub.h  GAHttpWrapper.h
source/gameanalytics/Platform/: GAHTTPApiUWP.cpp  GALinux.cpp
source/gameanalytics/Server/: GACustomFields.cpp  GACustomFields.h  GAGlobalData.h  GAPlayer.cpp  GAPlayer.h  GAPlayerDatabase.cpp  GAPlayerDatabase.h  GASerialize.cpp  GASerialize.h  GAServer.cpp  GAServer.h
test/: GAHttpInterfaceTests.cpp  GAValidatorTests.cpp  main.cpp
tests/: CMakeLists.txt
